<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GeoAlarm!</string>
    <string name="app_name">GeoAlarm</string>
    <string name="map_label">Map</string>
    <string name="trip_label">Plan Trip</string>
    <string name="options_label">Options</string>
    <string name="man_menu_label">Main Menu</string>
    <string name="empty"></string>
    <string name="time_remaining">Time Remaining:</string>
    <string name="dist_remaining">Distance Remaining:</string>
    <string name="back_label">Back</string>
    <string name="service_label">Service:</string>
    <string name="star_loc_label">Starting location:</string>
    <string name="destination">Destination:</string>
    <string name="alarm_options_label">Alarm Options</string>
    <string name="set_alarm_label">Set Alarm</string>
    <string name="line_label">Line:</string>
    <string name="digitalclock">DigitalClock</string>
    <string name="splash_screen">Splash</string>
    <string-array name="travel_type_array">
        <item>Select</item><item >Bus</item>
        <item >Train</item>
        
    </string-array>
    <string name="serviceBusTextFieldString">Bus</string>
    <string name="busLineTextFieldString">Line:</string>
    <string name="satellite_label">Satellite</string>
    <string name="data_button_string">Data</string>
    <string name="session_data_tx">Session TX:</string>
    <string name="total_data_tx">Total TX:</string>
    <string name="session_data_rx">Session RX:</string>
    <string name="total_data_rx">Total RX:</string>
    <string name="ringtone_length">Ringtone Length:</string>
    <string name="vibration_length">Vibration Length:</string>
    
    <string-array name="color_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Gray</item>
    </string-array>
        <string name="select_app_color">Select App Color:</string>
        <string name="save_preferences">Save</string>
        <string name="splash_screen_label">Turn on/off the splash screen:</string>
        <string name="splash_screen_toggle_button">ToggleButton</string>
        <string name="view_timetable">View Timetable</string>
        <string name="route_map_dialog_routes_label">Routes Servicing</string>
        <string name="routeMapDialogTripButton">Start/End Trip</string>
        <string name="update_database_button">Update Database</string>
        <string name="voice">Voice Search</string>

</resources>