<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sears_tower"
    android:gravity="bottom"
    android:orientation="vertical" >

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/digitalclock" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/map_label" 
        android:onClick="showMapScreen" />

    <Button
        android:id="@+id/tripButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="showTripScreen"
        android:text="@string/trip_label" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/options_label" 
        android:onClick="showOptionsScreen"/>

</LinearLayout>